apps/vikunja/base/vikunja-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app: vikunja
spec:
  type: ClusterIP
  selector:
    app: vikunja
  ports:
    - name: http
      port: 80
      targetPort: 3456
